<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarCreateTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Create Task"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/tvTitleTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarCreateTask" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:boxStrokeColor="@color/colorSecondaryVariant"
            app:hintTextColor="@color/colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleTag">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task_title"
                android:inputType="textCapWords"
                android:padding="8dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDescriptionTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:boxStrokeColor="@color/colorSecondaryVariant"
            app:hintTextColor="@color/colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionTag">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/enter_task_description"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="3"
                android:padding="8dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDateTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:boxStrokeColor="@color/colorSecondaryVariant"
            app:hintTextColor="@color/colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateTag">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorSecondaryVariant"
                android:focusable="false"
                android:gravity="start"
                android:hint="@string/set_date"
                android:padding="8dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvTimeTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:enabled="false"
            app:boxStrokeColor="@color/colorSecondaryVariant"
            app:hintTextColor="@color/colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTimeTag">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_access_time_black_24dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorSecondaryVariant"
                android:focusable="false"
                android:gravity="start"
                android:hint="@string/set_time"
                android:padding="8dp"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvCategoryTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutTime" />

        <ImageView
            android:id="@+id/btnAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_playlist_add_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategoryTag"
            app:tint="@color/colorSecondaryVariant"
            android:contentDescription="@string/add_arbitrary_category" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/btnAddCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategoryTag" />

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_save_24"
            app:layout_constraintTop_toBottomOf="@id/spCategory"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:backgroundTint="@color/colorSecondaryVariant"
            android:layout_margin="15dp"
            android:contentDescription="@string/save_task" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>